@@ -10,9 +10,7 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
+import java.util.*;
 
 @Entity
 @Table(name ="users")
@@ -24,7 +22,7 @@ public class User implements UserDetails {
 
     @Id
     @GeneratedValue(strategy = GenerationType.AUTO)
-    private long id;
+    private UUID id;
     private String firstName;
     private String lastName;
 
@@ -37,24 +35,23 @@ public class User implements UserDetails {
     @Enumerated(EnumType.STRING)
     private Role role;
 
-
     private String profileImageUrl;
-
-    private String birthday;
-    private String location;
-    private String address;
-
-    private String phoneNumber;
 
 //
 //    @ElementCollection( fetch = FetchType.EAGER)
 //    @CollectionTable(name = "completed_lesson", joinColumns = @JoinColumn(name = "user_id"))
 //    private List<Integer> completedLessons = new ArrayList<>();
 
-    @Override
-    public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(role.name()));
-    }
+//    @Override
+//    public Collection<? extends GrantedAuthority> getAuthorities() {
+//        return List.of(new SimpleGrantedAuthority(role.name()));
+//    }
+@Override
+public Collection<? extends GrantedAuthority> getAuthorities() {
+    // Ensure that authorities are granted correctly based on roles
+    return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role.name()));
+}
+
 
     @Override
     public String getUsername() {
